project pages are not showing the correct posts // #161

--- a/web/layout/extra/projects.less
+++ b/web/layout/extra/projects.less
@@ -33,11 +33,6 @@
         float: left;
     }
 
-    div.projectPosts
-    {
-        padding-top: 40px;
-    }
-
     div.miniPost
     {
         font-size: 0.9em;
