--- a/web/layout/primary.less
+++ b/web/layout/primary.less
@@ -298,27 +298,27 @@ table td .left { text-align: left; }
 
     a.sixthUnselected
     {
-        color: @rainbow_red_light;
+        color: @rainbow_red_light !important;
     }
     a.programmingUnselected, a.h28Unselected, a.fifthUnselected
     {
-        color: @rainbow_mag_light;
+        color: @rainbow_mag_light !important;
     }
     a.artworkUnselected, a.h27Unselected, a.fourthUnselected
     {
-        color: @rainbow_voi_light;
+        color: @rainbow_voi_light !important;
     }
     a.audiovideoUnselected, a.h26Unselected, a.thirdUnselected
     {
-        color: @rainbow_blu_light;
+        color: @rainbow_blu_light !important;
     }
     a.writingUnselected, a.h25Unselected, a.secondUnselected
     {
-        color: @rainbow_gre_light;
+        color: @rainbow_gre_light !important;
     }
     a.firstUnselected
     {
-        color: @rainbow_oli_light;
+        color: @rainbow_oli_light !important;
     }
 
     img
